# net-queue

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  deny.toml  rabbitmq.conf
.github/: dependabot.yaml
.github/workflows/: dependencies.yaml  release.yml  rust.yml
src/: amqp.rs  lib.rs  local.rs
